# generalized-kmeans-clustering

./: .dependency-check-suppressions.xml  .gitbook.yaml  .gitignore  .scala-steward.conf  .scalafmt.conf  .travis.yml  ACTION_ITEMS.md  AGENTS.md  ARCHITECTURE.md  ASSIGNMENT_SCALABILITY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATAFRAME_API_EXAMPLES.md  DEPENDENCY_MANAGEMENT.md  DF_ML_REFACTORING_PLAN.md  ENHANCEMENT_ROADMAP.md  EVALUATION_SUMMARY.md  EXPLANATION.md  GITHUB_ABOUT.txt  HACKERNEWS_ANNOUNCEMENT.md  HOW-TO.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  MERGE_CHECKLIST.md  MIGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_TUNING.md  PERSISTENCE_COMPATIBILITY.md  PERSISTENCE_IMPLEMENTATION_STATUS.md  PRODUCTION_READINESS_PLAN.md  PROPERTY_TESTING_FINDINGS.md  PUBLISHING.md  README.md  README_BADGES_SNIPPET.md  REFACTORING_SUMMARY.md  REFERENCE.md  RELEASE_NOTES_0.6.0.md  ROADMAP.md  (+15 more)
.bloop/: bloop.settings.json  generalized-kmeans-clustering-test.json  generalized-kmeans-clustering.json
.bsp/: sbt.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-pypi.yml  publish.yml  scala-ci.yml  scala-steward.yml
.metals/: metals.lock.db  metals.mv.db
docs/: CNAME  README.md  SUMMARY.md  _config.yml  index.md  llms.txt  params.json
docs/_explanation/: acceleration.md  assignment-strategies.md  cluster-validity.md  comparison-mllib.md  index.md  lloyds-algorithm.md  performance.md  soft-vs-hard.md  when-to-use.md
docs/_howto/: choose-divergence.md  cluster-probabilities.md  handle-outliers.md  index.md
docs/_reference/: index.md  parameters.md
docs/_tutorials/: choosing-algorithm.md  pyspark-tutorial.md
docs/api/: index.html  index.js
docs/concepts/: bregmanpoint-bregmancenter-bregmanpointops.md  kmeansmodel.md  kmeansselector.md  multikmeansclusterer.md
docs/explanation/: bregman-divergences.md  index.md
docs/getting-started/: introduction.md
docs/guides/: divergence-selection.md  quickstart.md  soft-clustering.md  xmeans-auto-k.md
docs/howto/: find-optimal-k.md  index.md  installation.md
project/: Build.scala  metals.sbt  plugins.sbt
python/: MANIFEST.in  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  smoke_test.py
python/examples/: README.md  basic_clustering.py  clustering_tutorial.ipynb  finding_optimal_k.py  kl_divergence_clustering.py  model_persistence.py  weighted_clustering.py
python/massivedatascience/: __init__.py
python/massivedatascience/clusterer/: __init__.py  kmeans.py
python/tests/: __init__.py  test_generalized_kmeans.py
release-notes/: releases.md
src/: quick-start.md
(+813 files in other folders)
